<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeMarinho"
    tools:context=".Timers">

    <Button
        android:id="@+id/open_close_btn"
        style="@style/BotaoNavegacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="42.1dp"
        android:paddingTop="12.5dp"
        android:paddingRight="42.1dp"
        android:paddingBottom="12.5dp"
        android:text="@string/Travas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/timers_btn"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/timers_btn"
        style="@style/BotaoNavegacao_Selecionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="32.75dp"
        android:paddingTop="12.5dp"
        android:paddingRight="32.75dp"
        android:paddingBottom="12.5dp"
        android:text="@string/Times"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="1dp"
        android:paddingTop="23dp"
        android:paddingRight="1dp"
        android:paddingBottom="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="396dp"
        android:layout_height="834dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Button
        android:id="@+id/sendButton"
        style="@style/BotaoAdicionar_remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="648dp"
        android:padding="10dp"
        android:text="@string/Enviar"
        app:layout_constraintEnd_toStartOf="@+id/btn_remove"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add"
        style="@style/BotaoAdicionar_remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="648dp"
        android:padding="10dp"
        android:text="@string/Adicionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_remove"
        style="@style/BotaoAdicionar_remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        android:text="@string/Remover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>